@@ -3,6 +3,7 @@ package com.ecom.factoryutils;
 import com.ecom.constants.FrameConstants;
 import com.ecom.enums.EBrowsers;
 import com.ecom.enums.Econfig;
+import com.ecom.exceptions.FrameworkExceptions;
 import com.ecom.exceptions.InValidBrowserEnteredException;
 import com.ecom.utils.ConfigReader;
 import org.openqa.selenium.WebDriver;
@@ -16,6 +17,7 @@ import org.openqa.selenium.safari.SafariDriver;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -35,14 +37,23 @@ public final class DriverFactory {
     private DriverFactory() {
     }
 
-    public static WebDriver getDriverInstance(String browserName) throws MalformedURLException {
+    public static WebDriver getDriverInstance(String browserName) {
 
         WebDriver driver;
 
         if (ConfigReader.getValue(Econfig.RUN_MODE).equalsIgnoreCase("remote")) {
                 DesiredCapabilities caps = new DesiredCapabilities();
+            if (browserName.equalsIgnoreCase("edge")) {
+                caps.setBrowserName("MicrosoftEdge");
+            } else {
                 caps.setBrowserName(browserName.toLowerCase());
-                driver = new RemoteWebDriver(new URL(FrameConstants.getRunModeUrl()), caps);
+            }
+            try {
+                URL url=new URI(FrameConstants.getRunModeUrl()).toURL();
+                driver = new RemoteWebDriver(url, caps);
+            }catch (MalformedURLException |  URISyntaxException e){
+                    throw new FrameworkExceptions("Malformed URL Exception Occurred!" ,e);
+            }
         }
         else {
             EBrowsers eBrowsers = EBrowsers.valueOf(browserName.toUpperCase());
